fix(core): Garante a ordem de execução dos semeadores de dados
Utiliza a anotação @Order para forçar o CategorySeeder (@Order(1))
a rodar antes do DataSeeder (@Order(2)).

Isso resolve o problema onde os produtos eram criados antes das
categorias existirem, garantindo que a inicialização da aplicação
ocorra sem erros de 'Categoria não encontrada'.